2010-11-05  Nicolas Dufresne  <nicolas.dufresne@collabora.co.uk>

Reviewed by Martin Robinson.

        [GTK] Link with target name set does not work correctly
        https://bugs.webkit.org/show_bug.cgi?id=48865

        When a new page is created with a name (target=myFrame), the new
        mainFrame could not be found because they where not stored in the
        same PageGroup. As PageGroup are not exposed externally so the
        simpliest solution is to use a global page group name. This also fixes
        issue with visited link coloration across pages. After this change the
        private function webkit_web_view_set_group_name() was no longer used
        so it was removed completly.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::closeWindowSoon):
        * webkit/webkitprivate.h:
        * webkit/webkitwebview.cpp:
        (webkit_web_view_init):

Canonical link: https://commits.webkit.org/61953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71466 268f45cc-cd09-0410-ab3c-d52691b4dbfc